add cool frontend
