# backend/docs/swagger.json
@@ -21,14 +21,26 @@
                 "tags": [
                     "Whale"
                 ],
-                "summary": "get images",
+                "summary": "get images with filters",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Latitude",
+                        "description": "Limit",
                         "name": "limit",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Author id",
+                        "name": "username",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Whale type",
+                        "name": "whale_type",
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -44,6 +56,53 @@
                         "schema": {
                             "$ref": "#/definitions/handler.getImagesResp"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.httpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/private/whale/update": {
+            "post": {
+                "description": "update images info",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Whale"
+                ],
+                "summary": "update images info",
+                "parameters": [
+                    {
+                        "description": "Req body json",
+                        "name": "limit",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.updateImageInfoReq"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "authorization bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
@@ -82,13 +141,13 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "number",
                         "description": "Latitude",
                         "name": "latitude",
                         "in": "formData"
                     },
                     {
-                        "type": "integer",
+                        "type": "number",
                         "description": "Longitude",
                         "name": "longitude",
                         "in": "formData"
@@ -212,8 +271,8 @@
                             "$ref": "#/definitions/handler.httpError"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/handler.httpError"
                         }
@@ -242,6 +301,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "image_url": {
                     "type": "string"
                 },
                 "latitude": {
@@ -332,6 +394,20 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.updateImageInfoReq": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "img_id": {
+                    "type": "string"
+                },
+                "whale_type": {
                     "type": "string"
                 }
             }
