# backend/internal/handler/handler.go
@@ -8,11 +8,16 @@ import (
 	"github.com/OkDenAl/humback-whale/internal/usecase/getimages"
 	"github.com/OkDenAl/humback-whale/internal/usecase/login"
 	"github.com/OkDenAl/humback-whale/internal/usecase/register"
+	"github.com/OkDenAl/humback-whale/internal/usecase/updateimginfo"
 	"github.com/OkDenAl/humback-whale/internal/usecase/uploadwhaleimg"
 )
 
 type iUploadWhaleImageUC interface {
 	Handle(ctx context.Context, cmd uploadwhaleimg.Command) (string, error)
+}
+
+type iUpdateWhaleImageInfoUC interface {
+	Handle(ctx context.Context, cmd updateimginfo.Command) error
 }
 
 type iGetWhaleImageUC interface {
@@ -28,10 +33,11 @@ type iRegisterUC interface {
 }
 
 type Handler struct {
-	uploadWhaleImageUC iUploadWhaleImageUC
-	getWhaleImageUC    iGetWhaleImageUC
-	loginUC            iLoginUC
-	registerUC         iRegisterUC
+	uploadWhaleImageUC     iUploadWhaleImageUC
+	getWhaleImageUC        iGetWhaleImageUC
+	loginUC                iLoginUC
+	registerUC             iRegisterUC
+	updateWhaleImageInfoUC iUpdateWhaleImageInfoUC
 }
 
 func New(
@@ -39,21 +45,25 @@ func New(
 	getWhaleImageUC iGetWhaleImageUC,
 	loginUC iLoginUC,
 	registerUC iRegisterUC,
+	updateWhaleImageInfoUC iUpdateWhaleImageInfoUC,
 ) Handler {
 	return Handler{
-		uploadWhaleImageUC: uploadWhaleImageUC,
-		getWhaleImageUC:    getWhaleImageUC,
-		loginUC:            loginUC,
-		registerUC:         registerUC,
+		uploadWhaleImageUC:     uploadWhaleImageUC,
+		getWhaleImageUC:        getWhaleImageUC,
+		loginUC:                loginUC,
+		registerUC:             registerUC,
+		updateWhaleImageInfoUC: updateWhaleImageInfoUC,
 	}
 }
 
 func (h Handler) SetPrivateRouter(api *gin.RouterGroup) {
 	api.POST("/whale/upload", h.uploadImg())
-	api.GET("/whale/images", h.getImages())
+	api.PUT("/whale/update/:img_id", h.updateImgInfo())
 }
 
 func (h Handler) SetPublicRouter(api *gin.RouterGroup) {
 	api.POST("/auth/login", h.login())
 	api.POST("/auth/register", h.register())
+
+	api.GET("/whale/images", h.getImages())
 }
